# discorduserbot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  error.rs  filters.rs  main.rs
