[package]
name = "discorduserbot"
version = "0.1.0"
authors = ["Marekkon5"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
discord = { git = "https://github.com/Marekkon5/discord-rs.git" }